--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.1.2",
     "@astrojs/image": "^0.7.0",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/svelte": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
+    "@types/alpinejs": "^3.7.0",
+    "alpinejs": "^3.10.3",
     "astro": "^1.2.1",
-    "autoprefixer": "^10.4.9"
+    "autoprefixer": "^10.4.9",
+    "svelte": "^3.50.1"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
