--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.7.0",
-    "@astrojs/mdx": "^0.11.1",
+    "@astrojs/mdx": "^0.11.4",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
     "@astrojs/turbolinks": "^0.1.4",
-    "@types/alpinejs": "^3.7.0",
     "astro": "^1.2.1",
     "autoprefixer": "^10.4.9"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.5.4"
+    "prettier-plugin-astro": "^0.5.5",
+    "prettier-plugin-tailwindcss": "^0.1.13"
   }
 }
