Changes to be committed: 	modified:   README.md 	modified:   astro.config.mjs 	modified:   package-lock.json 	modified:   package.json 	modified:   postcss.config.cjs 	new file:   src/assets/img/pamatky/10.1.jpg 	new file:   src/assets/img/pamatky/10.2.jpg 	new file:   src/assets/img/pamatky/10.jpg 	new file:   src/assets/img/pamatky/11.1.jpg 	new file:   src/assets/img/pamatky/11.2.jpg 	new file:   src/assets/img/pamatky/11.jpg 	new file:   src/assets/img/pamatky/12.1.jpg 	new file:   src/assets/img/pamatky/12.jpg 	new file:   src/assets/img/pamatky/13.1.jpg 	new file:   src/assets/img/pamatky/13.2.jpg 	new file:   src/assets/img/pamatky/13.jpg 	new file:   src/assets/img/pamatky/14.1.jpg 	new file:   src/assets/img/pamatky/14.jpg 	new file:   src/assets/img/pamatky/15.1.jpg 	new file:   src/assets/img/pamatky/15.jpg 	new file:   src/assets/img/pamatky/16.1.jpg 	new file:   src/assets/img/pamatky/16.jpg 	new file:   src/assets/img/pamatky/17.1.jpg 	new file:   src/assets/img/pamatky/17.2.jpg 	new file:   src/assets/img/pamatky/17.jpg 	new file:   src/assets/img/pamatky/18.1.jpg 	new file:   src/assets/img/pamatky/18.jpg 	new file:   src/assets/img/pamatky/19.1.jpg 	new file:   src/assets/img/pamatky/19.jpg 	new file:   src/assets/img/pamatky/20.1.jpg 	new file:   src/assets/img/pamatky/20.jpg 	new file:   src/assets/img/pamatky/21.1.jpg 	new file:   src/assets/img/pamatky/21.jpg 	new file:   src/assets/img/pamatky/22.1.jpg 	new file:   src/assets/img/pamatky/22.jpg 	new file:   src/assets/img/pamatky/23.1.jpg 	new file:   src/assets/img/pamatky/23.jpg 	new file:   src/assets/img/pamatky/24.1.jpg 	new file:   src/assets/img/pamatky/24.2.jpg 	new file:   src/assets/img/pamatky/24.jpg 	new file:   src/assets/img/pamatky/3.1.jpg 	new file:   src/assets/img/pamatky/3.jpg 	new file:   src/assets/img/pamatky/4.1.jpg 	new file:   src/assets/img/pamatky/4.2.jpg 	new file:   src/assets/img/pamatky/4.3.jpg 	new file:   src/assets/img/pamatky/4.jpg 	new file:   src/assets/img/

--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.1.2",
     "@astrojs/image": "^0.7.0",
     "@astrojs/mdx": "^0.11.4",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
     "@astrojs/turbolinks": "^0.1.4",
+    "@types/alpinejs": "^3.7.0",
+    "alpinejs": "^3.10.4",
     "astro": "^1.2.1",
-    "autoprefixer": "^10.4.9"
+    "autoprefixer": "^10.4.9",
+    "daisyui": "^2.31.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
