--- a/package.json
+++ b/package.json
@@ -10,21 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.7.0",
-    "@astrojs/mdx": "^0.11.4",
-    "@astrojs/prefetch": "^0.0.7",
+    "@astrojs/mdx": "^0.11.6",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^1.0.0",
-    "@astrojs/turbolinks": "^0.1.4",
+    "@astrojs/tailwind": "^4.0.0",
     "@types/alpinejs": "^3.7.0",
     "alpinejs": "^3.10.4",
-    "astro": "^1.2.1",
+    "astro": "latest",
     "autoprefixer": "^10.4.9",
     "cssnano": "^5.1.13",
     "daisyui": "^2.31.0",
-    "leaflet": "^1.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
